<resources>
    <string name="app_name">Demo</string>
    <string name="app_version">1.0.0</string>
    <string name="app_desc">房源用3D&#160;&#160;卖房更容易</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="del">删除</string>
    <string name="finish">完成</string>
    <string name="text_star">*</string>
    <string name="file_not_exit">文件不存在</string>
    <string name="type_case">案例</string>
    <string name="error_list_load">数据加载失败</string>
    <string name="login_login">登录</string>
    <string name="login_hint_input_tel">输入手机号码</string>
    <string name="login_hint_input_pwd">输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_error">登录失败</string>
    <string name="login_login_child_count">子账号登录</string>
    <string name="login_user_agent_text">"<font color='#666666' size='26px'>注册/登录即代表同意</font><font color='#CCCCCC' size='26px'>《白犀牛用户协议》</font>"</string>
    <string name="login_user_agent">注册/登录即代表同意《白犀牛用户协议》</string>
    <string name="login_unregister">尚未注册</string>
    <string name="login_how_register">如何注册</string>
    <string name="login_register_desc">白犀牛暂未开放注册，购买白犀牛相关产品后自动为您生成账号</string>
    <string name="login_action_buy">去购买</string>
    <string name="login_forget_pwd">忘记密码?</string>
    <string name="login_group">请选择团队</string>
    <string name="login_register_title">注册</string>
    <string name="login_register_input_tel">输入手机号码</string>
    <string name="login_register_get_code">获取验证码</string>
    <string name="login_register_input_code">请输入验证码</string>
    <string name="login_register_input_pwd">请输入密码(最少8位,数字加字母)</string>
    <string name="login_register_submit">立即注册</string>
    <string name="login_pwd_forget_title">找回密码</string>
    <string name="login_pwd_forget_input_tel">输入手机号码</string>
    <string name="login_pwd_forget_get_code">获取验证码</string>
    <string name="login_pwd_forget_input_code">请输入验证码</string>
    <string name="login_pwd_forget_input_pwd">请输入密码(最少8位,数字加字母)</string>
    <string name="login_pwd_forget_submit">确定</string>
    <string name="login_pwd_forget_child_title">子账号找回密码</string>
    <string name="login_pwd_def_reset">更改密码</string>
    <string name="login_pwd_def_reset_desc">为了保障您的账号安全，请修改初始密码</string>
    <string name="login_pwd_new">新密码</string>
    <string name="login_pwd_new_check">确认新密码</string>
    <string name="login_pwd_reset_success">密码重置成功,请重新登录</string>
    <string name="login_token_invalid">密码已失效,请重新登录</string>
    <string name="login_bind_tel_title">绑定手机号</string>
    <string name="login_bind_tel_input_tel">输入手机号码</string>
    <string name="login_bind_tel_get_code">获取验证码</string>
    <string name="login_bind_tel_submit">确定</string>
    <string name="login_bind_tel_tip">*如果放弃绑定手机号码，则无法完成登录操</string>
    <string name="login_toast_input_tel">请填写手机号码</string>
    <string name="login_toast_tel_error">请填写正确的手机号码</string>
    <string name="login_toast_code_error">验证码获取失败</string>
    <string name="login_toast_code_send">验证码已发送,请注意查收短信</string>
    <string name="login_toast_input_code">请输入验证码</string>
    <string name="login_toast_input_pwd">请输入密码</string>
    <string name="login_toast_input_pwd_length_error">密码最少8位</string>
    <string name="login_toast_register_error">注册失败</string>
    <string name="error_toast_unlogin">未登录</string>
    <string name="error_toast_disconnect_camera">请断开相机连接</string>
    <string name="error_toast_disconnect_net">没有网络连接</string>
    <string name="login_pwd_reset_title">设置密码</string>
    <string name="login_pwd_reset_desc">登录密码修改后，可用新密码登录App</string>
    <string name="login_pwd_reset_input_hint_new">请输入新密码</string>
    <string name="login_pwd_reset_confirm">完成</string>
    <string name="login_pwd_reset_success_dis_login">密码重置成功</string>
    <string name="login_mobile_reset_title">更改手机号</string>
    <string name="login_mobile_reset_cur">您当前的手机号:</string>
    <string name="login_mobile_reset_confirm">更改手机号</string>
    <string name="login_mobile_reset_desc">手机号更改后，您的登录账号会变更为新的手机号</string>
    <string name="login_dialog_pwd_input_title">请输入登录密码</string>
    <string name="login_mobile_reset_input_mobile_title">输入手机号</string>
    <string name="login_mobile_reset_input_mobile_desc">更换手机号后\n下次可使用新的手机号登录</string>
    <string name="login_mobile_reset_input_mobile_hint">请输入新的手机号</string>
    <string name="login_mobile_reset_input_mobile_confirm">确定</string>
    <string name="login_mobile_reset_input_code_title">输入验证码</string>
    <string name="login_mobile_reset_input_code_desc">验证码已发送至手机</string>
    <string name="login_mobile_reset_input_code_hint">请输入验证码</string>
    <string name="login_mobile_reset_input_code_confirm">完成</string>
    <string name="login_mobile_reset_success">手机号修改成功</string>
    <string name="login_error_user_code_invalid">您的账号已修改密码，请重新登录</string>
    <string name="share_text_weixin_circle">分享到朋友圈</string>
    <string name="share_text_weixin">分享到微信</string>
    <string name="share_text_qq">分享到QQ</string>
    <string name="share_text_qzone">分享到QQ空间</string>
    <string name="share_text_sina">分享到微博</string>
    <string name="share_text_copy_link">复制链接</string>
    <string name="share_text_shelf_on">房源上架</string>
    <string name="share_text_shelf_off">房源下架</string>
    <string name="share_text_del">删除</string>
    <string name="project_toast_shelf_on">已上架</string>
    <string name="project_toast_shelf_off">已下架</string>
    <string name="project_state_shelf_off">已下架</string>
    <string name="search_hint">您想找的楼盘、小区</string>
    <string name="search_result">为您找到以下房源</string>
    <string name="search_empty">没有找到相关的房源，换个内容试试吧</string>
    <string name="project_dialogEditProjectTitle">请输入房源标题</string>
    <string name="project_hintEditTitle">房源标题限制20个字</string>
    <string name="project_error_name_empty_project">房源标题不能为空</string>
    <string name="project_help_to_setting">去设置</string>
    <string name="project_help_title">请链接全景相机</string>
    <string name="project_exit_edit_tip">确认退出拍摄?</string>
    <string name="project_project_del_check">确认删除该项目?</string>
    <string name="project_title">全景</string>
    <string name="menu_table_all">全部</string>
    <string name="menu_table_sale">出售</string>
    <string name="menu_table_rent">出租</string>
    <string name="project_cloud_all">已上传-全部</string>
    <string name="project_cloud_sale">已上传-出售</string>
    <string name="project_cloud_rent">已上传-出租</string>
    <string name="project_local">未上传</string>
    <string name="project_empty">此处空空的什么也没有</string>
    <string name="project_empty_local">此处空空的什么也没有</string>
    <string name="project_empty_cloud">此处空空的什么也没有</string>
    <string name="project_photo">采集</string>
    <string name="project_nextStep">下一步</string>
    <string name="room_balcony">阳台</string>
    <string name="room_bathroom">卫生间</string>
    <string name="room_bedroom">主卧</string>
    <string name="room_kitchen">厨房</string>
    <string name="room_parlor">客厅</string>
    <string name="room_restaurant">餐厅</string>
    <string name="room_storageRoom">储物间</string>
    <string name="room_secondBedroom">次卧</string>
    <string name="room_studyRoom">书房</string>
    <string name="room_others">房间</string>
    <string name="room_entrance">玄关</string>
    <string name="room_aisle">过道</string>
    <string name="room_3D">3D</string>
    <string name="reTakePhoto">重新拍摄</string>
    <string name="module_ok">完成</string>
    <string name="module_remark">重新标注</string>
    <string name="downloading">文件正在下载中</string>
    <string name="downloadSuccess">下载成功</string>
    <string name="downloadError">下载失败</string>
    <string name="menu_play">查看</string>
    <string name="menu_edit">编辑</string>
    <string name="menu_del">删除</string>
    <string name="menu_share">分享</string>
    <string name="menu_upload">上传</string>
    <string name="size_square">㎡</string>
    <string name="symbol_add">+</string>
    <string name="symbol_reduce">-</string>
    <string name="room_edit">添加结构</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_ok">确认</string>
    <string name="customize">自定义</string>
    <string name="house_info_edit_new">录入房源信息</string>
    <string name="house_info_edit_next">下一步</string>
    <string name="house_info_edit_upload">上传</string>
    <string name="house_info_edit_save">保存</string>
    <string name="house_info_edit_update">更新</string>
    <string name="house_info_edit_type_menu_sale">当前选择房源类型</string>
    <string name="house_info_edit_location">所在位置</string>
    <string name="house_info_edit_location_hint">地区信息</string>
    <string name="house_info_edit_location_detail">详细地址</string>
    <string name="house_info_edit_location_detail_hint">请选择详细地址</string>
    <string name="house_info_edit_community_name">小区名称</string>
    <string name="house_info_edit_community_name_hint">输入小区名称</string>
    <string name="house_info_edit_project_name">房源标题</string>
    <string name="house_info_edit_project_name_hint">请填写房源标题</string>
    <string name="house_info_edit_unit_info">单元信息</string>
    <string name="house_info_edit_unit_info_hint">如1幢1单元1002室</string>
    <string name="house_info_edit_floor_info">所在楼层</string>
    <string name="house_info_edit_floor_info_hint">请选择所在楼层</string>
    <string name="house_info_edit_size_info">建筑面积</string>
    <string name="house_info_edit_size_info_hint">89</string>
    <string name="house_info_edit_price_sale">售价信息</string>
    <string name="house_info_edit_price_rent">租金信息</string>
    <string name="house_info_edit_price_sale_hint">400.50</string>
    <string name="house_info_edit_price_rent_hint">2000</string>
    <string name="house_info_edit_size_unit_m">平方米</string>
    <string name="house_info_edit_price_unit_yuan_wan">万元</string>
    <string name="house_info_edit_price_unit_yuan">元/月</string>
    <string name="house_info_edit_id">房源编号&#160;</string>
    <string name="house_info_edit_id_hint">房源编号</string>
    <string name="house_info_edit_map_upload_hint">上传户型图</string>
    <string name="house_info_edit_map_upload_desc">未上传户型图无法制作3D房源</string>
    <string name="house_info_edit_map_not_can_edit">当前状态不可修改户型图</string>
    <string name="house_info_edit_map_edit_disable_success">模型展示中，不可修改户型图</string>
    <string name="house_info_edit_map_edit_disable_processing">模型处理中，不可修改户型图</string>
    <string name="house_info_edit_map_edit_disable_none">未上传楼层对应户型图无法制作3D模型</string>
    <string name="house_info_edit_logo_hint">补地LOGO</string>
    <string name="house_info_edit_logo_desc">请上传500px*500px大小的图片</string>
    <string name="house_info_edit_decoration">装修状况</string>
    <string name="house_info_edit_decoration_hint">选择装修状况</string>
    <string name="house_info_edit_type">建筑类型</string>
    <string name="house_info_edit_type_hint">选择建筑类型</string>
    <string-array name="house_info_type_1">
        <item>新房</item>
        <item>二手房</item>
        <item>商业地产</item>
    </string-array>
    <string-array name="house_info_type_2">
        <item>普通住宅</item>
        <item>公寓</item>
        <item>别墅</item>
        <item>其他</item>
    </string-array>
    <string-array name="house_info_type_3">
        <item>商住两用</item>
        <item>写字楼</item>
        <item>商铺</item>
        <item>其他</item>
    </string-array>
    <string name="house_info_edit_rent_type">出租方式</string>
    <string name="house_info_edit_rent_type_hint">请选择出租方式</string>
    <string name="house_info_edit_rent_all">整租</string>
    <string name="house_info_edit_rent_share">合租</string>
    <string name="house_info_edit_pay_method">付款方式</string>
    <string name="house_info_edit_pay_method_hint">请选择付款方式</string>
    <string name="house_info_edit_pay_method_one_one">押一付一</string>
    <string name="camera_info_sn">序列号</string>
    <string name="camera_info_model">型号</string>
    <string name="camera_info_storage">储存</string>
    <string name="camera_info_storage_format" formatted="false">已使用 %s / %s</string>
    <string name="camera_info_storage_clear">清除SD卡</string>
</resources>