<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/imageViewCameraIC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="37dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@null"
            android:src="@mipmap/camera_ic_twin" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/camera_info_model"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewCameraModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:text="@string/camera_info_model"
                android:textColor="#333333"
                android:textSize="15sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="23dp"
            android:background="#EEEEEE" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="23dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/camera_info_sn"
                android:textColor="#666666"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewCameraSN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:text="@string/camera_info_model"
                android:textColor="#333333"
                android:textSize="15sp" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="23dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="21dp"
            android:layout_marginStart="23dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_info_storage"
                android:textColor="#666666"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCameraStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    tools:text="@string/camera_info_storage_format"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <ProgressBar
                    android:id="@+id/progressBarView"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="8dp"
                    android:progressDrawable="@drawable/layer_progressbar" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:id="@+id/btnClearSDCard"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:text="@string/camera_info_storage_clear"
        android:textColor="#FF5B5B"
        android:textSize="15sp" />


</LinearLayout>